terraform/backup/networking.tf
############################################
# VPC
############################################

resource "aws_vpc" "novapay" {

  cidr_block = "10.0.0.0/16"

  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "${var.project_name}-vpc"
  }
}

############################################
# Internet Gateway
############################################

resource "aws_internet_gateway" "novapay" {

  vpc_id = aws_vpc.novapay.id

  tags = {
    Name = "${var.project_name}-igw"
  }
}

############################################
# Public Subnet
############################################

resource "aws_subnet" "public" {

  vpc_id = aws_vpc.novapay.id

  cidr_block = "10.0.1.0/24"

  availability_zone = "${var.aws_region}a"

  map_public_ip_on_launch = true

  tags = {
    Name = "${var.project_name}-public-subnet"
  }
}

############################################
# Route Table
############################################

resource "aws_route_table" "public" {

  vpc_id = aws_vpc.novapay.id

  route {

    cidr_block = "0.0.0.0/0"

    gateway_id = aws_internet_gateway.novapay.id

  }

  tags = {
    Name = "${var.project_name}-public-rt"
  }
}

############################################
# Route Table Association
############################################

resource "aws_route_table_association" "public" {

  subnet_id = aws_subnet.public.id

  route_table_id = aws_route_table.public.id

}
